--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "antd": "^4.15.0",
     "babel-plugin-import": "^1.13.3",
     "customize-cra": "^1.0.0",
+    "font-awesome": "^4.7.0",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
